# msdp

./: .gitignore  CMakeLists.txt  package.xml
launch/: obstacles_to_moveit.launch
msdp/src/: pick_and_place.cpp
src/: add_object_node copy.cpp  add_object_node.cpp  ar_detector_node.cpp  obstacles_to_moveit.cpp  pick_and_place.cpp
srv/: GoalPoses.srv
